# Vita3K

./: .clang-format  .gitattributes  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CMakePresets.json  README.md  appveyor.yml  build.gradle  building.md  conanfile.py  deploy-Windows-nightly.sh  deploy-linux-nightly.sh  format.bat  format.sh  gen-linux.sh  gen-macos-universal.sh  gen-macos.sh  gen-windows.bat  gen.bat  gen.sh  gradle.properties  settings.gradle  unicorn.diff  vcpkg.json  vitaQuake.vpk  xxHash.diff  zh-s.xml  zh-t.xml
src/emulator/: CMakeLists.txt  app.cpp  app.h  app_functions.h  app_state.h  config.cpp  config.h  discord.cpp  discord.h  init.cpp  interface.cpp  interface.h  load_self.cpp  load_self.h  main.cpp  pkg.cpp  pkg.h  relocation.cpp  resource.h  screen_render.cpp  screen_render.h  sfo.cpp  sfo.h  vpk.cpp  vpk.h
src/emulator/app/: CMakeLists.txt
src/emulator/audio/: CMakeLists.txt
src/emulator/bridge/: CMakeLists.txt
src/emulator/config/: CMakeLists.txt
src/emulator/cpu/: CMakeLists.txt
src/emulator/crypto/: CMakeLists.txt
src/emulator/ctrl/: CMakeLists.txt
src/emulator/dialog/: CMakeLists.txt
src/emulator/disasm/: CMakeLists.txt
src/emulator/features/: CMakeLists.txt
src/emulator/glutil/: CMakeLists.txt
src/emulator/gui/: CMakeLists.txt
src/emulator/gxm/: CMakeLists.txt
src/emulator/host/: CMakeLists.txt
src/emulator/io/: CMakeLists.txt
src/emulator/kernel/: CMakeLists.txt
src/emulator/mem/: CMakeLists.txt
src/emulator/module/: CMakeLists.txt
src/emulator/modules/: CMakeLists.txt  module_parent.cpp
src/emulator/net/: CMakeLists.txt
src/emulator/nids/: CMakeLists.txt
src/emulator/np/: CMakeLists.txt
src/emulator/rand/: CMakeLists.txt
src/emulator/renderer/: CMakeLists.txt
src/emulator/reporting/: CMakeLists.txt
src/emulator/shader/: CMakeLists.txt
src/emulator/shadergen/: CMakeLists.txt
src/emulator/shaders/: 1559552016914556743.glsl  1576432547481204525.glsl  2458212448116229210.glsl  2537391683818671869.glsl  5095990795611153031.glsl  5153885995649291976.glsl  6959385632856496271.glsl  7814773853858461161.glsl  8614874113314413667.glsl  8854786452444500389.glsl  9967065856149153083.glsl
src/emulator/shaders-builtin/: render_main.vert
src/emulator/touch/: CMakeLists.txt
src/emulator/util/: CMakeLists.txt
vita3k/: CMakeLists.txt  Vita3K.rc  Windows.manifest  WindowsDpiAwareness.manifest  archive.h  cpu_protocol.cpp  cpu_protocol.h  dir_doc.cpp  interface.cpp  interface.h  main.cpp  performance.cpp  resource.h  resources.qrc
vita3k/Vita3K.icon/: icon.json
vita3k/adhoc/: CMakeLists.txt
vita3k/adhoc/src/: callbacks.cpp  calloutSyncing.cpp  matchingContext.cpp  matchingTarget.cpp  state.cpp  threads.cpp
vita3k/android/jni/: android_state.cpp  android_state.h  filesystem_android.cpp  ime.cpp  input_overlay.cpp  main_android.cpp  native_apps.cpp  native_bootstrap.cpp  native_config.cpp  native_drivers.cpp  native_install.cpp  native_session.cpp  native_trophies.cpp  native_users.cpp
vita3k/app/: CMakeLists.txt
vita3k/app/src/: app.cpp  app_init.cpp  apps_list.cpp  discord.cpp  screen_render.cpp  session_controller.cpp  user.cpp
vita3k/audio/: CMakeLists.txt
vita3k/audio/src/: audio.cpp
vita3k/bgm_player/: CMakeLists.txt
vita3k/bgm_player/src/: bgm_player.cpp
vita3k/camera/: CMakeLists.txt
vita3k/camera/src/: camera.cpp  camera_state.cpp
vita3k/codec/: CMakeLists.txt
vita3k/codec/src/: aac.cpp  atrac9.cpp  decoder.cpp  h264.cpp  mjpeg.cpp  mp3.cpp  pcm.cpp  player.cpp
vita3k/codec/tests/: atrac9_tests.cpp
vita3k/compat/: CMakeLists.txt
vita3k/compat/src/: compat.cpp
vita3k/config/: CMakeLists.txt
vita3k/config/src/: config.cpp  settings.cpp  version.cpp.in
vita3k/cpu/: CMakeLists.txt
vita3k/cpu/src/: cpu.cpp  disasm.cpp  dynarmic_cpu.cpp  read_arg.cpp  unicorn_cpu.cpp
vita3k/crypto/: CMakeLists.txt
vita3k/crypto/src/: aes.cpp  hash.cpp
vita3k/ctrl/: CMakeLists.txt
vita3k/ctrl/src/: ctrl.cpp  udp_client.cpp  udp_protocol.cpp
vita3k/dialog/: CMakeLists.txt
vita3k/disasm/: CMakeLists.txt
vita3k/disasm/src/: disasm.cpp
vita3k/display/: CMakeLists.txt
vita3k/display/src/: display.cpp
vita3k/emuenv/: CMakeLists.txt
vita3k/emuenv/src/: emuenv.cpp
vita3k/gdbstub/: CMakeLists.txt  README.md
vita3k/gdbstub/src/: gdb.cpp
vita3k/gdbstub/tests/: gdb_state_tests.cpp
vita3k/glutil/src/: object.cpp  shader.cpp
vita3k/gui/: CMakeLists.txt
vita3k/gui-qt/: CMakeLists.txt
vita3k/gui-qt/src/: about_dialog.cpp  about_dialog.ui  apps_list.cpp  apps_list_context_menu.cpp  apps_list_delegate.cpp  apps_list_table.cpp  archive_install_dialog.cpp  controls_dialog.cpp  controls_dialog.ui  ctrl_keyboard_filter.cpp  debug_widget.cpp  firmware_install_dialog.cpp  game_compatibility.cpp  qt_utils.cpp  (+28 more)
vita3k/gxm/: CMakeLists.txt
vita3k/host/: CMakeLists.txt
vita3k/http/: CMakeLists.txt
vita3k/https/: CMakeLists.txt
vita3k/ime/: CMakeLists.txt
vita3k/indicator/: CMakeLists.txt
vita3k/input/: CMakeLists.txt
vita3k/io/: CMakeLists.txt
vita3k/kernel/: CMakeLists.txt
vita3k/lang/: CMakeLists.txt
vita3k/mem/: CMakeLists.txt
vita3k/module/: CMakeLists.txt
vita3k/modules/: CMakeLists.txt  module_parent.cpp
vita3k/motion/: CMakeLists.txt
vita3k/net/: CMakeLists.txt
vita3k/ngs/: CMakeLists.txt
vita3k/nids/: CMakeLists.txt
vita3k/np/: CMakeLists.txt
vita3k/overlay/: CMakeLists.txt
vita3k/package/: CMakeLists.txt
vita3k/patch/: CMakeLists.txt
vita3k/patch_check/: CMakeLists.txt
vita3k/pvf/: CMakeLists.txt
vita3k/regmgr/: CMakeLists.txt
vita3k/renderer/: CMakeLists.txt  CMakeLists.txt.bak
vita3k/rtc/: CMakeLists.txt
vita3k/script/: update-linux.sh  update-macos.sh  update-windows.bat
vita3k/shader/: CMakeLists.txt
vita3k/shaders-builtin/: render_main.frag  render_main.vert  vulkan_imgui_frag.spv  vulkan_imgui_vert.spv
vita3k/threads/: CMakeLists.txt
vita3k/touch/: CMakeLists.txt
vita3k/updater/: CMakeLists.txt
vita3k/util/: CMakeLists.txt
vita3k/v3kn/: CMakeLists.txt
vita3k/vkutil/: CMakeLists.txt
(+2523 files in other folders)
